--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
           <div class="header">
             <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <a class="extra" href="{{ site.baseurl }}/">home</a>
+            <a class="extra" href="http://github.com/fleurer/hr-wiki">fork</a>
           </div>
 
           {{ content }}
